--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "ISC",
   "scripts": {
     "server": "npm run build && nodemon app.js",
-    "start": "set NODE_ENV=development&& gulp",
-    "build": "set NODE_ENV=production&& gulp build"
+    "start": "cross-env NODE_ENV=development&& gulp",
+    "build": "cross-env NODE_ENV=development&& gulp build"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -14,6 +14,7 @@
     "babelify": "^8.0.0",
     "browser-sync": "^2.23.6",
     "browserify": "^15.2.0",
+    "cross-env": "^5.2.0",
     "del": "^3.0.0",
     "gulp": "4.0",
     "gulp-autoprefixer": "^4.1.0",
