--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "cross-env NODE_ENV=development&& gulp",
     "build": "cross-env NODE_ENV=development&& gulp build"
   },
+  "nodemonConfig": {
+    "ignore": [
+      "storage/*"
+    ]
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -46,6 +51,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
     "jquery": "^3.3.1",
     "lowdb": "^1.0.0",
     "normalize.css": "^7.0.0"
