--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "formidable": "^1.2.1",
     "jquery": "^3.3.1",
     "lowdb": "^1.0.0",
+    "nodemailer": "^5.1.1",
     "normalize.css": "^7.0.0"
   }
 }
