--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jquery": "^3.3.1",
     "lowdb": "^1.0.0",
     "nodemailer": "^5.1.1",
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "readline": "^1.3.0"
   }
 }
