--- a/config.json
+++ b/config.json
@@ -10,5 +10,15 @@
         "pass": "t_fI_MzUdxeGZte"
       }
     }
-  }
+  },
+  "session": {
+    "key": "koa:sess",
+    "maxAge": 86400000,
+    "overwrite": true,
+    "httpOnly": true,
+    "signed": false,
+    "rolling": false,
+    "renew": false
+  },
+  "upload": "./public/upload"
 }
