--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "krabaton",
   "license": "ISC",
   "scripts": {
+    "koa-server": "npm run build && nodemon koa-app.js",
     "server": "npm run build && nodemon app.js",
     "start": "cross-env NODE_ENV=development&& gulp",
     "build": "cross-env NODE_ENV=development&& gulp build"
@@ -54,7 +55,10 @@
     "formidable": "^1.2.1",
     "jquery": "^3.3.1",
     "koa": "^2.7.0",
+    "koa-body": "^4.0.8",
+    "koa-flash-simple": "0.0.3",
     "koa-pug": "^3.0.0-2",
+    "koa-router": "^7.4.0",
     "koa-session": "^5.10.1",
     "koa-static": "^5.0.0",
     "lowdb": "^1.0.0",
